changed in dropdown menu

--- a/code.html
+++ b/code.html
@@ -38,13 +38,14 @@
             </li>-->
             <li id="codeLink">
                 <a class="menuItem" id="code" href="code.html"> Code</a>
+                <!-- Work in progress
                 <div class="dropdownContent" id="dropdownCode">
                     <a href="#">The Zoo</a>
                     <a href="#">Concrete Jungle</a>
                     <a href="#">Quiz Columbus</a>
                     <a href="#">Traveler's Guide</a>
                     <a href="#">Petshop</a>
-                </div>
+                </div>-->
             </li>
             <li id="aboutLink">
                 <a class="menuItem" id="about" href="about.html"> About</a>
