--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             </li>-->
             <li id="codeLink">
                 <a class="menuItem" id="code" href="code.html"> Code</a>
+                <!-- Work in progress
                 <div class="dropdownContent" id="dropdownCode">
                     <a href="#">The Zoo</a>
                     <a href="#">Jungel Quiz</a>
                     <a href="#">Swoopy</a>
-                </div>
+                </div>--->
             </li>
             <li id="aboutLink">
                 <a class="menuItem" id="about" href="about.html"> About</a>
