changed label on button

--- a/code.html
+++ b/code.html
@@ -146,7 +146,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn-lg viewProjectButton" onclick="location.href = 'https://laijnaloo.github.io/ConcreteJungle/index.html'">Preview code on GitHub</button>
+                <button type="button" class="btn-lg viewProjectButton" onclick="location.href = 'https://laijnaloo.github.io/ConcreteJungle/index.html'">Preview website</button>
             </div>
         </div>
 
@@ -249,7 +249,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn-lg viewProjectButton" onclick="location.href = 'https://laijnaloo.github.io/Petshop/index.html'">Preview code on GitHub</button>
+                <button type="button" class="btn-lg viewProjectButton" onclick="location.href = 'https://laijnaloo.github.io/Petshop/index.html'">Preview website</button>
             </div>
         </div>
 
